creando entradas de menu

--- a/reservation-demo/src/main/resources/templates/fragments/menu.html
+++ b/reservation-demo/src/main/resources/templates/fragments/menu.html
@@ -75,8 +75,10 @@
                 <li class="dropdown" id="stock-entry" data-z="edbedb96">
                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-th-utext="#{label_menu_entry(#{label_stock})}">Stock<span class="caret"></span></a>
                  <ul class="dropdown-menu">
-	                   <li><a href="/stocks/create-form" data-th-href="@{/stocks/create-form}" data-th-utext="#{label_create_entity(#{label_stock})}">Create Stock</a></li>
+	                   <li><a href="/stocks/create-form" data-th-href="@{/stocks/create-form}" data-th-utext="#{label_create_entity(#{label_stock})}">Create Stock Item</a></li>
 	                  <li><a href="/stocks" data-th-href="@{/stocks}" data-th-utext="#{label_list_entity(#{label_stock_plural})}">List Stock</a></li>
+	                  <li><a href="/stocks/increase" data-th-href="@{/stocks/increase}" data-th-utext="#{label_list_entity(#{label_stock_increase})}">Increase Stock Item</a></li>
+	                  <li><a href="/stocks/decrease" data-th-href="@{/stocks/decrease}" data-th-utext="#{label_list_entity(#{label_stock_decrease})}">Decrease Stock Item</a></li>
                  </ul>
                 </li>
               </ul>
