--- a/reservation-demo/src/main/resources/templates/products/list.html
+++ b/reservation-demo/src/main/resources/templates/products/list.html
@@ -27,7 +27,22 @@
 
           <!--TABLE-->
           <div class="table-responsive" id="containerFields" data-th-with="collectionLink=${@linkBuilder.of('ProductsCollectionThymeleafController')},itemLink=${@linkBuilder.of('ProductsItemThymeleafController')}">
-              <table id="product-entity-table" style="width: 99.7%" class="table table-striped table-hover table-bordered" data-datatables="true" data-row-id="id" data-select="single" data-z="17c45b23" data-order="[[ 1, &quot;asc&quot; ]]" data-data-load-url="${collectionLink.to('datatables')}" data-data-show-inline="false" data-data-show-url="${itemLink.to('show').with('product', '_ID_')}" data-data-export-csv-url="${collectionLink.to('exportCsv')}" data-data-export-xls-url="${collectionLink.to('exportXls')}" data-data-export-pdf-url="${collectionLink.to('exportPdf')}" data-data-create-url="${collectionLink.to('createForm')}" data-data-edit-url="${itemLink.to('editForm').with('product', '_ID_')}" data-data-delete-url="${itemLink.to('delete').with('product', '_ID_')}" data-data-delete-batch-url="${collectionLink.to('deleteBatch').with('ids', '_ID_')}">
+              <table id="product-entity-table" style="width: 99.7%" class="table table-striped table-hover table-bordered" 
+              	data-datatables="true" 
+              	data-row-id="id" 
+              	data-select="single" 
+              	data-z="17c45b23" 
+              	data-order="[[ 1, &quot;asc&quot; ]]" 
+              	data-data-load-url="${collectionLink.to('datatables')}" 
+              	data-data-show-inline="false" 
+              	data-data-show-url="${itemLink.to('show').with('product', '_ID_')}" 
+              	data-data-export-csv-url="${collectionLink.to('exportCsv')}" 
+              	data-data-export-xls-url="${collectionLink.to('exportXls')}" 
+              	data-data-export-pdf-url="${collectionLink.to('exportPdf')}" 
+              	data-data-create-url="${collectionLink.to('createForm')}" 
+              	data-data-edit-url="${itemLink.to('editForm').with('product', '_ID_')}" 
+              	data-data-delete-url="${itemLink.to('delete').with('product', '_ID_')}" 
+              	data-data-delete-batch-url="${collectionLink.to('deleteBatch').with('ids', '_ID_')}">
                 <caption class="sr-only" data-th-text="#{label_list_entity(#{label_product_plural})}">Product List</caption>
                 <thead>
                   <tr>
