--- a/reservation-demo/src/main/resources/templates/products/list.html
+++ b/reservation-demo/src/main/resources/templates/products/list.html
@@ -41,6 +41,7 @@
               	data-data-export-pdf-url="${collectionLink.to('exportPdf')}" 
               	data-data-create-url="${collectionLink.to('createForm')}" 
               	data-data-edit-url="${itemLink.to('editForm').with('product', '_ID_')}" 
+              	data-data-increase-url="${itemLink.to('increaseForm').with('product', '_ID_')}" 
               	data-data-delete-url="${itemLink.to('delete').with('product', '_ID_')}" 
               	data-data-delete-batch-url="${collectionLink.to('deleteBatch').with('ids', '_ID_')}">
                 <caption class="sr-only" data-th-text="#{label_list_entity(#{label_product_plural})}">Product List</caption>
